--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ description_footer: Welcome to Yayun Liu's personal website！
 
 # comments
 duoshuo_shortname: #hygblog
-disqus_shortname: yayunl
+disqus_shortname: yayunliu
 
 google_analytics_id: G-G6XFMTHQE9 # google measurement id
 
