Update disqus shortname in config file

--- a/_config.yml
+++ b/_config.yml
@@ -21,8 +21,7 @@ linkedIn_username: yayunliu1990
 description_footer: Welcome to Yayun Liu's personal website！
 
 # comments
-duoshuo_shortname: #hygblog
-disqus_shortname: yayunliu
+disqus_shortname: https-yayunl-github-io
 
 google_analytics_id: G-G6XFMTHQE9 # google measurement id
 
