Add mermaid support

--- a/_config.yml
+++ b/_config.yml
@@ -46,5 +46,11 @@ excerpt_separator: "\n\n\n\n"
 gems: [jekyll-paginate]
 paginate: 10
 
+# mermaid
+mermaid:
+  src: "assets/js/mermaid.js"
+
 plugins:
   - jekyll-paginate
+  - jekyll-mermaid
+
